Edited index page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         illum error. Mollitia ipsum, dolor sit amet consectetur adipisicing elit. 
                         Earum illo magnam accusamus itaque facere, iste natus fugit reprehenderit 
                         vero minima porro</p>
-                        <div class="row col-12 justify-content-center pt-3">
+                        <div class="row justify-content-center pt-3">
                             <div class="col">
                                 <a href="http://www.twitter.com/miketutumt" class="text-dark fs-2"><i class="bi bi-twitter"></i></a>
                               </div>
@@ -36,12 +36,12 @@
                                 <a href="https://www.instagram.com/miketutu_mt/" class="text-dark fs-2"><i class="bi bi-instagram"></i></a>
                               </div>
                               <div class="col">
-                                <a href="github.com/MikeTutu/" class="text-dark fs-2"><i class="bi bi-github"></i></a>
+                                <a href="https://www.github.com/MikeTutu/" class="text-dark fs-2"><i class="bi bi-github"></i></a>
                               </div>
                         </div>
                         <div class="border-top">
                             <div>
-                                <div class="card-body text-center">
+                                <div class="card-body text-center pt-4">
                                     <a href="mailto:tutuanimichael@gmail.com" class="contact fs-5">Contact Me</a>
                                 </div>
                             </div>
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <footer>
-                    <p class="fs-5">© 2021 MikeTutu, Inc · Privacy · Terms </p>
+                    <p class="fs-6 pt-3">© 2021 MikeTutu, Inc · Privacy · Terms </p>
                 </footer>
             </div>
         </div>
