Included assests directory

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="col-lg-8">
                 <div class="card">
                     <div class="card-body text-center">
-                        <img src="mike.jpg" alt="" class="avatar">
+                        <img src="/assets/mike.jpg" alt="" class="avatar">
                         <h1 class="fw-500 pt-3">Michael Tutuani</h1>
                         <p class="fs-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                         Earum illo magnam accusamus itaque facere, iste natus fugit reprehenderit 
