Edited index and style file

--- a/index.html
+++ b/index.html
@@ -20,15 +20,33 @@
                 <div class="card">
                     <div class="card-body text-center">
                         <img src="mike.jpg" alt="" class="avatar">
-                        <h1 class="fw-500 pt-3">Michael Tutuani</h1>
-                        <p class="fs-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                        Earum illo magnam accusamus itaque facere, iste natus fugit reprehenderit 
-                        vero minima porro, dolorum voluptatum praesentium perferendis fugiat eius 
-                        illum error. Mollitia? dolorum voluptatum praesentium perferendis fugiat eius 
-                        illum error. Mollitia ipsum, dolor sit amet consectetur adipisicing elit. 
-                        Earum illo magnam accusamus itaque facere, iste natus fugit reprehenderit 
-                        vero minima porro</p>
-                        <div class="row justify-content-center pt-3">
+                        <h3 class="display-4 pt-3">Web Design <span class="amp">&</span> Development</h3>
+                        <h1 class="display-6 fw-light">Allow me to introduce myself</h1>
+                        <p class="fs-4">I'm obsessed with making things and making them better. I've been actively involved
+                            in web design community for sometime now, and I've designed and developed websites for small businesses, 
+                            corporations and nonprofits.<br><br>
+                            My speciality is frontend web design and development, turning designed UIs into beautiful, semantic HTML, CSS
+                            and JavaScript. However, I extend my interests beyond web development to helping people with branding.
+                        </p>
+                        <div class="container">
+                            <h2 class="display-6 fw-light">Checkout programming languages I'm good in</h2>
+                            <div class="row">
+                                <div class="col">
+                                    <ul class="list">
+                                       <li><span id="list-item" class="list-group-item border-white">C</span></li>
+                                       <li><span id="list-item" class="list-group-item border-white">JavaScript</span></li>
+                                       <li><span id="list-item" class="list-group-item border-white">Python</span></li>
+                                    </ul>
+                                  </div>
+                                  <div class="col">
+                                    <ul class="list">
+                                        <li><span id="list-item" class="list-group-item border-white">Java</span></li>
+                                        <li><span id="list-item" class="list-group-item border-white"></span></li>
+                                     </ul>
+                                  </div>
+                            </div>
+                        </div>
+                        <div class="row pt-3">
                             <div class="col">
                                 <a href="http://www.twitter.com/miketutumt" class="text-dark fs-2"><i class="bi bi-twitter"></i></a>
                               </div>
