Edited index and style file

--- a/index.html
+++ b/index.html
@@ -48,13 +48,16 @@
                         </div>
                         <div class="row pt-3">
                             <div class="col">
-                                <a href="http://www.twitter.com/miketutumt" class="text-dark fs-2"><i class="bi bi-twitter"></i></a>
+                                <a href="http://www.twitter.com/miketutumt" class="text-dark fs-2"><i class="bi bi-twitter" id="icon-twitter"></i></a>
                               </div>
                               <div class="col">
-                                <a href="https://www.instagram.com/miketutu_mt/" class="text-dark fs-2"><i class="bi bi-instagram"></i></a>
+                                <a href="https://www.instagram.com/miketutu_mt/" class="text-dark fs-2"><i class="bi bi-instagram" id="icon-instagram"></i></a>
                               </div>
                               <div class="col">
-                                <a href="https://www.github.com/MikeTutu/" class="text-dark fs-2"><i class="bi bi-github"></i></a>
+                                <a href="https://www.github.com/MikeTutu/" class="text-dark fs-2"><i class="bi bi-github" id="icon-github"></i></a>
+                              </div>
+                              <div class="col">
+                                <a href="https://gh.linkedin.com/in/michael-tutuani-97a682199" class="text-dark fs-2"><i class="bi bi-linkedin" id="icon-linkedin"></i></a>
                               </div>
                         </div>
                         <div class="border-top">
