Edited index and style file

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                               <div class="col">
                                 <a href="https://gh.linkedin.com/in/michael-tutuani-97a682199" class="text-dark fs-2"><i class="bi bi-linkedin" id="icon-linkedin"></i></a>
                               </div>
+                              <div class="col">
+                                <a href="https://wa.me/+233267180577" class="text-dark fs-2"><i class="bi bi-whatsapp" id="icon-whatsapp"></i></a>
+                              </div>
                         </div>
                         <div class="border-top">
                             <div>
