--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-lg-8">
-                <div class="card">
+                <div class="card border-0">
                     <div class="card-body text-center">
                         <img src="mike.jpg" alt="" class="avatar">
                         <h3 class="display-4 pt-3">Web Design <span class="amp">&</span> Development</h3>
