--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <div class="row">
                                 <div class="col">
                                     <ul class="list">
-                                       <li><span id="list-item" class="list-group-item border-white">C</span></li>
+                                       <li><span id="list-item" class="list-group-item border-white">PHP</span></li>
                                        <li><span id="list-item" class="list-group-item border-white">JavaScript</span></li>
                                        <li><span id="list-item" class="list-group-item border-white">Python</span></li>
                                     </ul>
@@ -41,7 +41,7 @@
                                   <div class="col">
                                     <ul class="list">
                                         <li><span id="list-item" class="list-group-item border-white">Java</span></li>
-                                        <li><span id="list-item" class="list-group-item border-white"></span></li>
+                                        <li><span id="list-item" class="list-group-item border-white">C</span></li>
                                      </ul>
                                   </div>
                             </div>
